--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+<!--        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">-->
+        <br>
+        <br>
         <h1 class="text-light"><a href="index.html">Mahir Saeed</a></h1>
+        <br>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
